--- a/backend/style.css
+++ b/backend/style.css
@@ -9,6 +9,7 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
+   overflow-y: auto;
         }
         header {
             width: 100vw;
